Feature: Add footer from cloned repo

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Welcome to our collaboeration project</h1>
 <p>This is the initial version</p>
 <p>A new feature added directly from GitHub</p>
+<footer>Added from new clone</footer>
