feature: Modify first paragraph on efeature banch

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Welcome to our collaboeration project</h1>
 <p>This is the initial version</p>
+<p>This paragraph was added on the feature branch</p>
 <p>A new feature added directly from GitHub</p>
 <footer>Added from new clone</footer>
