feature: Add link to about page

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <p>This paragraph has been updated by both sides, keeping both changes merged</p>
 <p>A new feature added directly from GitHub</p>
 <footer>Added from new clone</footer>
+<p><a href="about.html">About Us</a></p>
