Feature: Add contact us link to index.html

--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
 <p>A new feature added directly from GitHub</p>
 <footer>Added from new clone</footer>
 <p><a href="about.html">About Us</a></p>
+<p><a href="contact.html">Contact Us</a></p>
