Feature: Add new hihglihgts section

--- a/index.html
+++ b/index.html
@@ -6,3 +6,9 @@
 <p><a href="about.html">About Us</a></p>
 <p><a href="contact.html">Contact Us</a></p>
 <p>Current project status: On track</p>
+<div id="hightlights">
+<h2>key features</h2>
+<ul>
+  <li>Responsive Design</li>
+  <li>Fast loading speed</li>
+</ul>
