--- a/profile.html
+++ b/profile.html
@@ -2,3 +2,4 @@
 <h1>Welcome user</h1>
 <p>This is your persoanl info page</p>
 <p>Email: user@example.com</p>
+<footer>&copy;2025 Our project</footer>
