--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <li>Responsive Design</li>
   <li>Fast loading speed</li>
 </ul>
-<p><a href="user_details.html">My Profile></a></p>
+<p><a href="profile.html">My Profile></a></p>
 <p><a href="button.html">Demo</a></p>
 <p>THis change was done in the main branch</p>
