Feature: git tag demo

--- a/index.html
+++ b/index.html
@@ -15,3 +15,5 @@
 <p><a href="profile.html">My Profile></a></p>
 <p><a href="button.html">Demo</a></p>
 <p>THis change was done in the main branch</p>
+<p>This is a demo for Git tag</p>
+<p>We will mark this for a release</p>
