Changes in feature1 branch

--- a/index.html
+++ b/index.html
@@ -15,3 +15,4 @@
 <p><a href="profile.html">My Profile></a></p>
 <p><a href="button.html">Demo</a></p>
 <p>THis change was done in the main branch</p>
+This is a change from feature 1
