Changes in the feature 2 branch

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <h1>Welcome to our collaboeration project</h1>
 <p>This is the initial version</p>
 <p>This paragraph has been updated by both sides, keeping both changes merged</p>
@@ -16,3 +17,5 @@
 <p><a href="button.html">Demo</a></p>
 <p>THis change was done in the main branch</p>
 This is a change from feature 1
+
+This is change from feature 2
