--- a/index.html
+++ b/index.html
@@ -19,3 +19,5 @@
 This is a change from feature 1
 
 This is change from feature 2
+
+This changes wa done by another developer and pushed to the main rbanch
