--- a/index.html
+++ b/index.html
@@ -21,3 +21,5 @@ This is a change from feature 1
 This is change from feature 2
 
 This change  was done by another developer and oushed to main branch
+
+This is a change from the local repo
